Moved structure around, and added create()

--- a/jss.html
+++ b/jss.html
@@ -9,18 +9,23 @@
         <script type="text/javascript" src="jss.js"></script>
         <script type="text/javascript">
             setTimeout(function () {
-                jss('.testClass', 'set', {
+                jss.get('.testClass', 'set', {
                     borderColor: 'orange',
                     borderWidth: '5px',
                     fontSize: '4em'
                 });
             }, 1000);
             setTimeout(function () {
-                jss('.testClass', 'remove');
+                jss.get('.testClass', 'remove');
+                jss.create('p');
+                jss.get('p', jss.styleSheet, 'set', {
+                    background: '#abc'
+                });
             }, 2000);
         </script>
     </head>
     <body>
         <div class="testClass">Test Div</div>
+        <p>Test paragraph</p>
     </body>
 </html>
