Updated demo to work with new API, and only log to console if it exists.

--- a/demo.html
+++ b/demo.html
@@ -12,7 +12,7 @@
                     jss('.special', {
                         padding: '10px'
                     });
-                    console.dir(jss('.special'));
+                    window.console && console.dir(jss('.special').get());
                 }, 1000);
             };
         </script>
