--- a/test/test.html
+++ b/test/test.html
@@ -1,15 +1,20 @@
 <html>  
-  <head>  
+    <head>  
     <link rel="stylesheet" href="qunit.css" type="text/css"/>
     <script src="qunit.js"></script>
     <script src="../jss.js"></script>
     <script src="test-jss.js"></script>
-  </head>
-  <body>
+    <style>
+        #qunit-fixture {
+            display: none;
+        }
+    </style>
+</head>
+<body>
     <h1 id="qunit-header">Test JSS</h1>
     <h2 id="qunit-banner"></h2>
     <h2 id="qunit-userAgent"></h2>
-    <ol id="qunit-tests">
-    </ol>
+    <ol id="qunit-tests"></ol>
+    <div id="qunit-fixture"></div>
   </body>  
 </html>
