Add support for retrieving all styles added via JSS, fix issues in Firefox and update README

--- a/demo.html
+++ b/demo.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <style>
             body {
                 font: 16px sans-serif;
