Support (and mandate) double colon syntax for pseudo elements

--- a/test/test.html
+++ b/test/test.html
@@ -5,7 +5,8 @@
         <link rel="stylesheet" href="qunit.css" type="text/css"/>
         <script src="qunit.js"></script>
         <script src="../jss.js"></script>
-        <script src="test-jss.js"></script>
+        <script src="test-basic.js"></script>
+        <script src="test-pseudo.js"></script>
         <style>
             #jss-test {
                 display: none;
