Add new tests and minified version

--- a/test/test.html
+++ b/test/test.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="qunit.css" type="text/css"/>
         <script src="qunit.js"></script>
-        <script src="../jss.js"></script>
+        <script src="../jss.min.js"></script>
         <script src="test-basic.js"></script>
         <script src="test-pseudo.js"></script>
         <style>
